Made Spigot ready